--- a/templates/server/package.json
+++ b/templates/server/package.json
@@ -12,17 +12,18 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.1",
-    "nodemon-webpack-plugin": "0.1.5",
+    "cross-env": "^5.1.3",
+    "nodemon-webpack-plugin": "0.1.6",
     "null-loader": "^0.1.1",
-    "webpack": "^3.10.0",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
-    "@cra-express/core": "^2.0.0",
+    "@cra-express/core": "^2.1.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "dotenv": "^4.0.0"
+    "dotenv": "^5.0.1"
   }
 }
